--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,13 @@ body {
     position: absolute;
 }
 
+#tree {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+
+}
+
 #wateringcan {
     width: 200px;
     position: fixed;
