--- a/css/styles.css
+++ b/css/styles.css
@@ -1,68 +1,81 @@
 html,
 body {
-    height: 100%;
+  height: 100%;
 }
 
-
 #butterfly {
-    height: 200px;
-    width: auto;
-    position: absolute;
+  height: 200px;
+  width: auto;
+  position: absolute;
 }
 
 #tree {
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
 }
 
 #wateringcan {
-    width: 200px;
-    position: fixed;
-    bottom: 20%;
-    left: 40%;
+  width: 200px;
+  position: fixed;
+  bottom: 20%;
+  left: 40%;
+  transition: transform 0.3s ease-in-out;
 }
 
+/* change the location of the water drop */
 
 .waterdrop {
-    width: 20px;
+  width: 20px;
 }
 
 #net {
-    height: 600px;
-    width: auto;
-    position: absolute;
-
+  height: 600px;
+  width: auto;
+  position: absolute;
 }
 
 .apple {
-    height: 50px;
-    width: auto;
-    position: absolute;
+  height: 50px;
+  width: auto;
+  position: absolute;
 }
 
+#apple1 {
+  left: 1000px;
+  top: 100px;
+  transition: transform 2s ease-in-out;
+}
+#apple2 {
+  left: 1150px;
+  top: 200px;
+}
+#apple3 {
+  left: 1300px;
+  top: 120px;
+}
 #tree {
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
 }
 
 .basket {
-    width: 200px;
-    position: fixed;
-    bottom: 20px;
-    left: 20%;
-
+  width: 200px;
+  position: fixed;
+  bottom: 20px;
+  left: 20%;
 }
 
+#basketfront {
+  z-index: 10;
+}
 
 body {
-    margin: 0px;
-    background-image: url("../images/grass.png");
-    background-attachment: fixed;
-    background-repeat: repeat-x;
-    background-position: bottom;
-    overflow: hidden;
+  margin: 0px;
+  background-image: url("../images/grass.png");
+  background-attachment: fixed;
+  background-repeat: repeat-x;
+  background-position: bottom;
+  overflow: hidden;
 }
